Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2, 10.3
-
None
-
All
Description
CREATE TEMPORARY TABLE t (i INT);
|
CREATE or replace TABLE t AS SELECT * FROM t;
|
The last stmt will give error
ERROR 1093 (HY000): Table 't' is specified twice, both as a target for 'CREATE' and as a separate source for data
|
Attachments
Issue Links
- is duplicated by
-
MDEV-15867 Slave SQL: Error 'Table 't' is specified twice (ER_UPDATE_TABLE_USED) upon CREATE TABLE .. SELECT
-
- Closed
-