sql/sql_parse.cc
@@ -3910,8 +3910,8 @@ mysql_execute_command(THD *thd)
       {
         TABLE_LIST *duplicate;
         if ((duplicate= unique_table(thd, lex->query_tables,
-                                     lex->query_tables->next_global,
-                                     CHECK_DUP_FOR_CREATE)))
+                          lex->query_tables->next_global,
+                          CHECK_DUP_FOR_CREATE | CHECK_DUP_SKIP_TEMP_TABLE)))
         {
           update_non_unique_table_error(lex->query_tables, "CREATE",
                                         duplicate);
